File structure was edited. Besides Pinia store was added for future usages.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "lint-staged": "^14.0.1",
     "nuxt": "^3.7.4",
     "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-eslint-parser": "^9.3.1",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.6"
   }
 }
