--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .js,.json,.md,.vue,.ts .",
     "prepare": "husky install",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
