--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "vue/multi-word-component-names": ["error", {
       "ignores": ["default", "Header", "index", "Footer"]
     }],
+    "vue/no-v-html": ["off"],
     "@typescript-eslint/no-unused-vars": ["warn"]
   }
 }
