Added Second Section

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,9 +11,7 @@
     "prettier"
   ],
   "rules": {
-    "vue/multi-word-component-names": ["error", {
-      "ignores": ["default", "Header", "index", "Footer"]
-    }],
+    "vue/multi-word-component-names": ["off"],
     "vue/no-v-html": ["off"],
     "@typescript-eslint/no-unused-vars": ["warn"]
   }
